# playwright-python-testing

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
pages/locators/: blog_page_locators.py  main_page_locators.py
pages/page_objects/: blog_page.py  navbar.py
tests/: test_blog_page.py  test_main_page.py  test_navbar.py  test_what_if_mwb.py
