[tool.poetry]
name = "autobot"
version = "0.1.0"
authors = ["david carvalho"]
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"
pytest-playwright = "^0.5.0"
pytest-base-url = "^2.1.0"
pre-commit = "^3.5.0"
pytest-xdist = "^3.6.1"
playwright = "^1.44.0"
pytest-html = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
